add sync egoing

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<h1>Git</h1>
 		</header>
 		<ul>
+			<li>sync.egoing</li>
 			<li>Git이란?</li>
 			<li>버젼</li>
 			<li>Branch</li>
@@ -25,6 +26,7 @@
 			<li>push</li>
 			<li>pull</li>
 			<li>push.egoing</li>
+
 		</ul>
 
 	</body>
